--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Font Awesome fonts-->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+    </style>
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>The History Quiz</title>
 </head>
 <body>
-    
+    <h1 class="heading">The History Quiz</h1>
+
+    <div class="quiz-area">
+
+    </div>
+
+    <div class="score-area">
+
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
