--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,13 +11,25 @@
     </style>
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>The History Quiz</title>
+
+    <title>World History Quiz</title>
+    <!-- Favicon -->
+     <link rel="apple-touch-icon" sizes="192x192" href="assets/favicon/android-chrome-192x192.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
 </head>
+
 <body>
-    <h1 class="heading">The History Quiz</h1>
+    <h1 class="heading">World History Quiz</h1>
 
+    <!--Multichoice quiz area-->
     <div class="quiz-area">
-
+        <div class="game-controls">
+            <button class="answer-1">Answer: 1</button>
+            <button class="answer-2">Answer: 2</button>
+            <button class="answer-3">Answer: 3</button>
+            <button class="answer-4">Answer: 4</button>
+        </div>
     </div>
 
     <div class="score-area">
@@ -24,4 +37,5 @@
     </div>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
