Added footer and social media links, Added nav bar basic

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!-- Meta tags for search engine -->
+    <meta name="description" content="quiz games, online quiz, history quiz, history, world history,">
+    <meta name="keywords" content="quiz, games, knowledge, learning, learn history">
     <!-- Font Awesome fonts-->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
     </style>
-
+    <!-- Links Css to html -->
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>World History Quiz</title>
@@ -21,6 +23,13 @@
 
 <body>
     <h1 class="heading">World History Quiz</h1>
+    <nav class="navbar">
+        <ul>
+            <li><a href="" class="active">Home</a></li>
+            <li><a href=""> Quiz</a></li>
+            <li><a href=""> Scoreboard</a></li>
+        </ul>
+    </nav>
 
     <!--Multichoice quiz area-->
     <div class="quiz-area">
@@ -37,5 +46,17 @@
     </div>
     <script src="assets/js/script.js"></script>
 </body>
+
+<!-- Footer -->
+<footer class="footer">
+    <div class="social-icons">
+        <!-- Links to social media in footer -->
+        <li><a href="https://www.facebook.com" target="_blank" rel="noopener">Facebook</a></li>
+        <li><a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="https://www.youtube.com" target="_blank" rel="noopener">YouTube</a></li>
+        <li><a href="https://www.x.com" target="_blank" rel="noopener">X</a></li>
+    </div>
+
+</footer>
 
 </html>
