--- a/quiz-page.html
+++ b/quiz-page.html
@@ -25,17 +25,22 @@
     <h1 class="heading">World History Quiz</h1>
     <nav class="navbar">
         <ul>
-            <li><a href="" class="active">Home</a></li>
-            <li><a href=""> Quiz</a></li>
+            <li><a href="" >Home</a></li>
+            <li><a href="" class="active"> Quiz</a></li>
             <li><a href=""> Scoreboard</a></li>
         </ul>
     </nav>
 
-    <!-- Start Area --> 
-    <div class="start-area">
+    <!--Multichoice quiz area--> 
+    <div class="quiz-area">
+        <div class="game-controls">
             <button class="answer-1">Answer: 1</button>
+            <button class="answer-2">Answer: 2</button>
+            <button class="answer-3">Answer: 3</button>
+            <button class="answer-4">Answer: 4</button>
         </div>
     </div>
+    <div class="score-area">
 
     </div>
     <script src="assets/js/script.js"></script>
