linked up quiz page and index html so you can switch between pages

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </style>
     <!-- Links Css to html -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="">
 
     <title>World History Quiz</title>
     <!-- Favicon -->
@@ -22,15 +23,19 @@
 </head>
 
 <body>
+    <!-- Header Content -->
+<header>
     <h1 class="heading">World History Quiz</h1>
     <nav class="navbar">
         <ul>
-            <li><a href="" class="active">Home</a></li>
-            <li><a href=""> Quiz</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="quiz-page.html"> Quiz</a></li>
             <li><a href=""> Scoreboard</a></li>
         </ul>
     </nav>
-
+</header>
+    <!-- Main Content -->
+<main>
     <!-- Start Area --> 
     <div class="start-area">
             <button class="answer-1">Answer: 1</button>
@@ -39,7 +44,8 @@
 
     </div>
     <script src="assets/js/script.js"></script>
-</body>
+
+</main>
 
 <!-- Footer -->
 <footer class="footer">
@@ -52,5 +58,5 @@
     </div>
 
 </footer>
-
+</body>
 </html>
