--- a/quiz-page.html
+++ b/quiz-page.html
@@ -13,6 +13,7 @@
     </style>
     <!-- Links Css to html -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="">
 
     <title>World History Quiz</title>
     <!-- Favicon -->
@@ -22,15 +23,19 @@
 </head>
 
 <body>
+    <!-- Header Content -->
+<header>
     <h1 class="heading">World History Quiz</h1>
     <nav class="navbar">
         <ul>
-            <li><a href="" >Home</a></li>
-            <li><a href="" class="active"> Quiz</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="quiz-page.html" class="active"> Quiz</a></li>
             <li><a href=""> Scoreboard</a></li>
         </ul>
     </nav>
-
+</header>
+    <!-- Main Content -->
+<main>
     <!--Multichoice quiz area--> 
     <div class="quiz-area">
         <div class="game-controls">
@@ -44,7 +49,8 @@
 
     </div>
     <script src="assets/js/script.js"></script>
-</body>
+
+</main>
 
 <!-- Footer -->
 <footer class="footer">
@@ -57,5 +63,5 @@
     </div>
 
 </footer>
-
+</body>
 </html>
