Added basic score page

--- a/quiz-page.html
+++ b/quiz-page.html
@@ -30,7 +30,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="quiz-page.html" class="active"> Quiz</a></li>
-            <li><a href=""> Scoreboard</a></li>
+            <li><a href="scoreboard.html">Scoreboard</a></li>
         </ul>
     </nav>
 </header>
