--- a/scoreboard.html
+++ b/scoreboard.html
@@ -28,9 +28,9 @@
     <h1 class="heading">World History Quiz</h1>
     <nav class="navbar">
         <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html" >Home</a></li>
             <li><a href="quiz-page.html"> Quiz</a></li>
-            <li><a href="scoreboard.html"> Scoreboard</a></li>
+            <li><a href="scoreboard.html" class="active">Scoreboard</a></li>
         </ul>
     </nav>
 </header>
