styled home page and built quote text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="quiz games, online quiz, history quiz, history, world history,">
     <meta name="keywords" content="quiz, games, knowledge, learning, learn history">
     <!-- Font Awesome fonts-->
+     
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
     </style>
@@ -36,27 +37,42 @@
 </header>
     <!-- Main Content -->
 <main>
-    <!-- Start Area --> 
-    <div class="start-area">
-            <button class="answer-1">Answer: 1</button>
+        <!-- Start Area --> 
+    <div class="start-area"> <!-- Text at the top of the home page -->
+        <p> Welcome to The World History Quiz!</p>
+        <p> Please click the start quiz button below to begin, Good Luck!</p>
+            <button class="quiz-start">Start Quiz!</button>
+            <p class="famous-quotes">Famous Quotes:</p>
+        </div> 
+        <div class="quotes"> <!-- Quotes -->
+            <p class="author">United States (Abraham Lincoln):</p>
+            <p>"Nearly all men can stand adversity, but if you want to test a man's character, give him power."</p>
+            <p class="author">China (Confucius):</p>
+            <p>"Our greatest glory is not in never falling, but in rising every time we fall."</p>
+            <p class="author">India (Mahatma Gandhi):</p>
+            <p>"Be the change that you wish to see in the world."</p>
+            <p class="author">Russia (Leo Tolstoy):</p>
+            <p>"Everyone thinks of changing the world, but no one thinks of changing himself."</p>
+            <p class="author">United Kingdom (Winston Churchill):</p>
+            <p>"Success is not final, failure is not fatal: It is the courage to continue that counts."</p>
         </div>
-    </div>
 
     </div>
     <script src="assets/js/script.js"></script>
-
 </main>
 
 <!-- Footer -->
 <footer class="footer">
     <div class="social-icons">
         <!-- Links to social media in footer -->
-        <li><a href="https://www.facebook.com" target="_blank" rel="noopener">Facebook</a></li>
-        <li><a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a></li>
-        <li><a href="https://www.youtube.com" target="_blank" rel="noopener">YouTube</a></li>
-        <li><a href="https://www.x.com" target="_blank" rel="noopener">X</a></li>
+        <li><a href="https://www.facebook.com" target="_blank" rel="noopener" ><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fa-brands fa-youtube"></i></a></li>
+        <li><a href="https://www.x.com" target="_blank" rel="noopener"><i class="fa-brands fa-square-x-twitter"></i></a></li>
     </div>
 
 </footer>
+<!-- Font awesome kit -->
+<script src="https://kit.fontawesome.com/649459904e.js" crossorigin="anonymous"></script>
 </body>
 </html>
