--- a/quiz-page.html
+++ b/quiz-page.html
@@ -8,6 +8,7 @@
     <meta name="description" content="quiz games, online quiz, history quiz, history, world history,">
     <meta name="keywords" content="quiz, games, knowledge, learning, learn history">
     <!-- Font Awesome fonts-->
+     
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
     </style>
@@ -28,9 +29,9 @@
     <h1 class="heading">World History Quiz</h1>
     <nav class="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" >Home</a></li>
             <li><a href="quiz-page.html" class="active"> Quiz</a></li>
-            <li><a href="scoreboard.html">Scoreboard</a></li>
+            <li><a href="scoreboard.html"> Scoreboard</a></li>
         </ul>
     </nav>
 </header>
@@ -46,22 +47,21 @@
         </div>
     </div>
     <div class="score-area">
-
-    </div>
     <script src="assets/js/script.js"></script>
-
 </main>
 
 <!-- Footer -->
 <footer class="footer">
     <div class="social-icons">
         <!-- Links to social media in footer -->
-        <li><a href="https://www.facebook.com" target="_blank" rel="noopener">Facebook</a></li>
-        <li><a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a></li>
-        <li><a href="https://www.youtube.com" target="_blank" rel="noopener">YouTube</a></li>
-        <li><a href="https://www.x.com" target="_blank" rel="noopener">X</a></li>
+        <li><a href="https://www.facebook.com" target="_blank" rel="noopener" ><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fa-brands fa-youtube"></i></a></li>
+        <li><a href="https://www.x.com" target="_blank" rel="noopener"><i class="fa-brands fa-square-x-twitter"></i></a></li>
     </div>
 
 </footer>
+<!-- Font awesome kit -->
+<script src="https://kit.fontawesome.com/649459904e.js" crossorigin="anonymous"></script>
 </body>
 </html>
