Made start button work with js and added first question and answers

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1 class="heading">World History Quiz</h1>
     <nav class="navbar">
         <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li> <!-- Targets home page to be displayed -->
             <li><a href="quiz-page.html"> Quiz</a></li>
             <li><a href="scoreboard.html"> Scoreboard</a></li>
         </ul>
@@ -46,7 +46,7 @@
         </a>
             <p class="famous-quotes">Famous Quotes:</p>
         </div> 
-        <div class="quotes"> <!-- Quotes -->
+        <div class="quotes"> <!-- Quotes on home page -->
             <p class="author">United States (Abraham Lincoln):</p>
             <p>"Nearly all men can stand adversity, but if you want to test a man's character, give him power."</p>
             <p class="author">China (Confucius):</p>
@@ -60,7 +60,7 @@
         </div>
 
     </div>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script> <!-- Allows JavaScript to link with website -->
 </main>
 
 <!-- Footer -->
