--- a/quiz-page.html
+++ b/quiz-page.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="">
 
-    <title>World History Quiz</title>
+    <title>World History Quiz</title> <!-- Name in tab -->
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="192x192" href="assets/favicon/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -26,11 +26,11 @@
 <body>
     <!-- Header Content -->
     <header>
-        <h1 class="heading">World History Quiz</h1>
+        <h1 class="heading">World History Quiz</h1> <!-- Main header for website -->
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="quiz-page.html" class="active"> Quiz</a></li>
+                <li><a href="quiz-page.html" class="active"> Quiz</a></li> <!-- Targets quiz page to be displayed -->
                 <li><a href="scoreboard.html"> Scoreboard</a></li>
             </ul>
         </nav>
@@ -39,10 +39,10 @@
     <main>
         <!--Multichoice quiz area-->
         <div class="container">
-            <div id="question-container" class="hide">
-                <div id="question">Question</div>
+            <div id="question-container" class="hide"> <!-- Hide will hide the question until start button is clicked -->
+                <div id="question">Question</div> <!-- Area for questions to be displayed -->
                 <div id="answer-buttons" class="btn-grid">
-                    <button class="btn">Answer 1</button>
+                    <button class="btn">Answer 1</button> <!-- Buttons for each answer choice -->
                     <button class="btn">Answer 2</button>
                     <button class="btn">Answer 3</button>
                     <button class="btn">Answer 4</button>
