--- a/quiz-page.html
+++ b/quiz-page.html
@@ -53,6 +53,7 @@
                 <button id="next-question-btn" class="next-question-btn btn hide">Next Question</button>
             </div>
         </div>
+        <div id="quiz-end-message" class="hide"></div>
         <script src="assets/js/script.js"></script>
     </main>
 
