Changed the text at the top of the home page to fit smaller screens then 344 width and the same for the container on the quiz page

--- a/quiz-page.html
+++ b/quiz-page.html
@@ -38,6 +38,12 @@
     <!-- Main Content -->
     <main>
         <!--Multichoice quiz area-->
+        <!--When Building this area around the multichoice quiz area 
+        i relied on the same Youtube video mentioned in my JavaScript
+        about how to structure it correctly so that i can link the following
+        with my JavaScript so it can give me just the foundation to work from 
+        Please feel free to check out the video "Build A Quiz App With JavaScript"
+        for reference, i have provided the link in my ReadMe file for ease -->
         <div class="container">
             <div id="question-container" class="hide"> <!-- Hide will hide the question until start button is clicked -->
                 <div id="question">Question</div> <!-- Area for questions to be displayed -->
