--- a/quiz-page.html
+++ b/quiz-page.html
@@ -59,6 +59,8 @@
                 <button id="next-question-btn" class="next-question-btn btn hide">Next Question</button>
             </div>
         </div>
+        <div id="score-container">
+            <p>Score: <span id="score">0</span></p> 
         <div id="quiz-end-message" class="hide"></div>
         <script src="assets/js/script.js"></script>
     </main>
