added working score system properly

--- a/quiz-page.html
+++ b/quiz-page.html
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div id="score-container">
-            <p>Score: <span id="score">0</span></p> 
+            <p>Score: <span id="score">0</span></p></div>
         <div id="quiz-end-message" class="hide"></div>
         <script src="assets/js/script.js"></script>
     </main>
