Added content to scoreboard page and css styling

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -37,7 +37,10 @@
 </header>
     <!-- Main Content -->
 <main>
-
+    <div class = "overall-scores-container">
+    <h1 class = "overall-scores-header">Overall Scores!</h1>
+    <p></p>
+    </div>
     <script src="assets/js/script.js"></script>
 </main>
 
