testing for css complete, added final comments

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <meta name="description" content="quiz games, online quiz, history quiz, history, world history,">
     <meta name="keywords" content="quiz, games, knowledge, learning, learn history">
     <!-- Font Awesome fonts-->
-     
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
     </style>
     <!-- Links Css to html -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="">
 
     <title>World History Quiz</title>
     <!-- Favicon -->
@@ -29,7 +27,7 @@
     <h1 class="heading">World History Quiz</h1>
     <nav class="navbar">
         <ul>
-            <li><a href="index.html" class="active">Home</a></li> <!-- Targets home page to be displayed -->
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="quiz-page.html"> Quiz</a></li>
         </ul>
     </nav>
@@ -37,7 +35,7 @@
     <!-- Main Content -->
 <main>
         <!-- Start Area --> 
-    <div class="start-area"> <!-- Text at the top of the home page -->
+    <div class="start-area">
         <p> Welcome to The World History Quiz!</p>
         <p> Please click the start quiz button below to begin, Good Luck!</p>
         <a href="quiz-page.html">
@@ -65,7 +63,7 @@
 <!-- Footer -->
 <footer class="footer">
     <div class="social-icons">
-        <!-- Links to social media in footer -->
+        <!-- Links to social media in footer, Added noopener to open browser in another window -->
         <li><a href="https://www.facebook.com" target="_blank" rel="noopener" ><i class="fa-brands fa-facebook"></i></a></li>
         <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a></li>
         <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fa-brands fa-youtube"></i></a></li>
