Fix issues with question display, input validation, and error handling

--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@
             <p class="author">United Kingdom (Winston Churchill):</p>
             <p>"Success is not final, failure is not fatal: It is the courage to continue that counts."</p>
         </div>
-
-        <script src="assets/js/script.js"></script> <!-- Allows JavaScript to link with website -->
     </main>
 
     <!-- Footer -->
@@ -75,6 +73,10 @@
         </div>
 
     </footer>
+
+    <!-- Allows JavaScript to link with website -->
+    <script src="assets/js/script.js"></script> 
+
     <!-- Font awesome kit -->
     <script src="https://kit.fontawesome.com/649459904e.js" crossorigin="anonymous"></script>
 </body>
